--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@
   padding: 10px;
   border: 8px solid rgb(241, 122, 10);
   margin: 30px;
+  font-family: island Moments;
+  text-align: center;
 }
 
 .boton {
