--- a/style2.css
+++ b/style2.css
@@ -11,3 +11,8 @@ table, th, td{
     text-decoration-color: brown;
     background-color: beige;
 }
+
+th {
+    color: rgb(237, 243, 243);
+    background-color: aqua;
+}
