--- a/estilos2.css
+++ b/estilos2.css
@@ -1,3 +1,7 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 ol{
     list-style: none;
     counter-reset: contador;
@@ -25,7 +29,8 @@ div{
     border: 10px solid #560bad;
     background-color: aquamarine;
     text-align: center;
-}
+    margin: 10px 115px;
+    padding: 15px;
 h2{
     text-align: center;
 }
