--- a/formulario.css
+++ b/formulario.css
@@ -34,4 +34,15 @@ body {
     background-color: transparent;
     border: none;
     border-bottom: 1px solid white;
+    margin-bottom: 30px;
+}
+
+.contenedor .elemento input[type="submit"]{
+    background-color: fuchsia;
+    border: none;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    cursor: pointer;
+    padding: 15px;
+    margin-top: 30px;
 }
